--- a/src/views/forms/editlotform.jade
+++ b/src/views/forms/editlotform.jade
@@ -1,43 +1,62 @@
-div(id="editlotform" class='col s12 white-text' style="margin:10px")
-    .row
-        input-field(class='col s3 blue-grey darken-4')
-            label(for="consignorId") Consignor#Id
-            input(id="consignorId" name="consignorId" class="datainfo")
-        
-        input-field(class='col s3 blue-grey darken-4')
-            label(for="displayitemid") Item ID
-            input(id="displayitemid" name="displayitemid" class="datainfo")
-
-        input-field(class='col s3 offset-s2 blue-grey darken-4')
-            label(for="lotnumber") Lotnumber
-            input(id="lotnumber" name="lotnumber" class="datainfo")
+div(id="editlotform" style="margin:10px;display:none")
     
-    .row
-        input-field(class='col s7')
+        div(class="gear")
+            label(for="displayitemid") Item ID
+            span(id="displayitemid" name="displayitemid" class="datainfo")
+
+        div(class="gear")
+            label(for="lotnumber") Lotnumber
+            span(id="lotnumber" name="lotnumber" class="datainfo")
+            
+            a(href="#" class="editlink") Edit Info
+            a(class="savebtn") Save
+
+        div(class="gear")
             label(for="itemname") Item Name
-            input(id="name" name="name" class="datainfo")
+            span(id="name" name="name" class="datainfo")
+            
+            a(href="#" class="editlink") Edit Info
+            a(class="savebtn") Save
 
-        input-field(class='col s4')
+        div(class="gear")
             label(for="category") Category
-            input(id="category" name="category" class="datainfo")
+            span(id="category" name="category" class="datainfo")
             
-    .row
-        input-field(class='col s12')
+            a(href="#" class="editlink") Edit Info
+            a(class="savebtn") Save
+
+        div(class="gear")
             label(for="description") Description
-            textarea(id="itemdescription" name="description" class="materialize-textarea datainfo")
+            span(id="description" name="description" class="datainfo")
+            
+            a(href="#" class="editlink") Edit Info
+            a(class="savebtn") Save
 
-    .row
-        input-field(class='col s4')
+        div(class="gear")
             label(for="estimatelow") Estimate Low
-            input(id="estimatelow" name="estimatelow" class="datainfo")
+            span(id="estimatelow" name="estimatelow" class="datainfo")
+            
+            a(href="#" class="editlink") Edit Info
+            a(class="savebtn") Save
 
-        input-field(class='col s4')
+        div(class="gear")
             label(for="estimatehigh") Estimate High
-            input(id="estimatehigh" name="estimatehigh" class="datainfo")
+            span(id="estimatehigh" name="estimatehigh" class="datainfo")
             
-        input-field(class='col s4')
+            a(href="#" class="editlink") Edit Info
+            a(class="savebtn") Save
+
+        div(class="gear")
             label(for="reserve") Reserve
-            input(id="reserve" name="reserve" class="datainfo")
+            span(id="reserve" name="reserve" class="datainfo")
             
+            a(href="#" class="editlink") Edit Info
+            a(class="savebtn") Save
+
+        div(class="gear")
+            label(for="cconsignorId") Consignor#Id
+            span(id="consignorId" name="consignorId" class="datainfo")
             
-        a(class="savebtn") Save
+            a(href="#" class="editlink") Edit Info
+            a(class="savebtn") Save
+        button(class="deleteitem btn waves-effect waves-light blue-grey darken-4" type="submit" value="delete") Delete
