--- a/src/views/consignor.jade
+++ b/src/views/consignor.jade
@@ -5,11 +5,13 @@ head
 	link(href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet")
 	link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css")
 	link(rel="stylesheet" href="/css/style.css")
-	link(rel="stylesheet" href="/css/tables.css")
+	link(rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.12/css/jquery.dataTables.css")
+  
 	meta(name='viewport', content='width=device-width, initial-scale=1')
 	script(src='http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js')
 	script(src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js")
 	script(src="/js/custom.js")
+	script(type="text/javascript" charset="utf8" src="//cdn.datatables.net/1.10.12/js/jquery.dataTables.js")
 
 body
 	include ./navbar.jade
