--- a/src/views/forms/consignorform.jade
+++ b/src/views/forms/consignorform.jade
@@ -52,5 +52,4 @@ div(id="consignorform" style="display:none")
                     input(placeholder="Fee" value="10" name="fee" type="text" class="validate")
         .row
             button(class="btn waves-effect waves-light blue-grey darken-4" type="submit" value="add" style="width:150px") Add
-           
-        button(class="btn waves-effect waves-light deep-orange darken-4" id="canceladdconsignor" style="width:150px") Cancel
+            a(class="btn waves-effect waves-light deep-orange darken-4" id="canceladdconsignor" style="margin-left:10px;width:150px") Cancel
