--- a/src/views/forms/lotform.jade
+++ b/src/views/forms/lotform.jade
@@ -46,5 +46,5 @@ div(id="itemform" style="display:none")
                 
         .row
             button(class="btn waves-effect waves-light blue-grey darken-4" type="submit" value="add" style="width:150px") Add
-            
-        button(class="btn waves-effect waves-light deep-orange darken-4" id="canceladditem" style="width:150px") Cancel
+            a(class="btn waves-effect waves-light deep-orange darken-4" id="canceladditem" style="margin-left:10px;width:150px") Cancel
+        
