--- a/src/css/style.css
+++ b/src/css/style.css
@@ -50,6 +50,10 @@ label { display: inline-block; font-weight: bold; color: white; font-size: 12px;
     .invoice-box table tr td:nth-child(4){
         text-align:right;
     }
+
+    .invoice-box table tr td:nth-child(5){
+        text-align:right;
+    }
     
     .invoice-box table tr.top table td{
         padding-bottom:20px;
