--- a/src/views/invoiceconsignor.jade
+++ b/src/views/invoiceconsignor.jade
@@ -25,7 +25,8 @@ html(lang='en' class="blue-grey darken-4")
 								td(colspan="2")
 									table
 										tr
-											td(class="title") Auctionate
+											td(class="title") 
+												img(src="/img/auctionate_black.svg" style="margin:5px; height:50px")
 											td Date:
 							tr(class="information")
 								td(colspan="2")
