--- a/src/views/invoiceconsignor.jade
+++ b/src/views/invoiceconsignor.jade
@@ -27,7 +27,7 @@ html(lang='en' class="blue-grey darken-4")
 										tr
 											td(class="title") 
 												img(src="/img/auctionate_black.svg" style="margin:5px; height:50px")
-											td Date:
+											td #{moment().format('DD/MM/YYYY')}
 							tr(class="information")
 								td(colspan="2")
 									table
