--- a/src/views/consignor.jade
+++ b/src/views/consignor.jade
@@ -6,7 +6,7 @@ head
 	link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css")
 	link(rel="stylesheet" href="/css/style.css")
 	link(rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.12/css/jquery.dataTables.css")
-  
+
 	meta(name='viewport', content='width=device-width, initial-scale=1')
 	script(src='http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js')
 	script(src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js")
@@ -15,34 +15,36 @@ head
 
 body
 	include ./navbar.jade
-	
+
 	.row
-		
+
 		div(class="blue-grey darken-3 col s6" style="height:100vh")
-			div(style="margin-top:10px;")
-				button(class="btn waves-effect waves-light blue-grey darken-4" id="addconsignor" style=" float:right") Add Consignor
-				
-			
-			table(class="white-text bordered highlight" id="consignors" cellspacing="0" width="100%")
-				thead
-					tr
-						th ID
-						th Name
-						th City
-						th
-				tbody
-					each consignor in consignors
-						tr
-							td=consignor.id
-							td=consignor.firstname +" "+ consignor.lastname
-							td=consignor.city
-							td
-								button(class="btn waves-effect waves-light blue-grey darken-4" type="get" value="get" id="editconsignor") edit
-								
-							
+			div(class="col s12" style="margin-top:10px;")
+
+				.row
+					button(class="btn waves-effect waves-light blue-grey darken-4" id="addconsignor" style=" float:right") Add Consignor
+					input(type="text" id="myInputTextField")
+
+				.row
+					
+					table(class="white-text bordered highlight" id="consignors" cellspacing="0" width="100%")
+
+						thead
+							tr
+								th ID
+								th Name
+								th City
+
+						tbody
+							each consignor in consignors
+								tr
+									td=consignor.id
+									td=consignor.firstname +" "+ consignor.lastname
+									td=consignor.city							
+
 
 		div(class="blue-grey darken-2 col s6" style="height:100vh")
-						
+
 			include ./forms/consignorform.jade			
-			
+
 			include ./forms/editconsignorform.jade
