--- a/src/views/forms/lotform.jade
+++ b/src/views/forms/lotform.jade
@@ -44,7 +44,7 @@ div(id="itemform" style="display:none")
                 input(placeholder="Reserve" name="reserve" type="text" class="validate")
                 
         .row
-            button(class="btn waves-effect waves-light blue-grey darken-4" type="submit" value="add" style="width:150px") Add
+            button(class="btn waves-effect waves-light blue-grey darken-4" type="submit" value="add" style="width:150px" id="createlot") Add
             a(class="btn waves-effect waves-light deep-orange darken-4" id="canceladditem" style="margin-left:10px;width:150px") Cancel
 
 
@@ -52,14 +52,3 @@ script.
     (200, {'Content-Type': 'text/html' });
 <form action="/item1" enctype="multipart/form-data" method="post"> <br><br><input multiple="multiple" name="upload" type="file"br>
 <input type="submit" value="add" style="color:black" /></form>
-
-
-
-//- form(action="/item1" enctype="multipart/form-data" method="post")
-//-     .row
-//-         input(multiple="multiple" name="upload" type="file")
-//-         input(type="submit" value="Upload" style="color:black")
-
-           
-        
-
