--- a/src/views/forms/lotform.jade
+++ b/src/views/forms/lotform.jade
@@ -45,13 +45,14 @@ div(id="itemform" style="display:none")
                 
         .row
             button(class="btn waves-effect waves-light blue-grey darken-4" type="submit" value="add" style="width:150px") Add
-            a(class="btn waves-effect waves-light deep-orange darken-4" id="canceladditem" style="margin-left:10px;width:150px") Cancel
 
-
-script.
-    (200, {'Content-Type': 'text/html' });
-<form action="/item1" enctype="multipart/form-data" method="post"> <br><br><input multiple="multiple" name="upload" type="file"br>
-<input type="submit" value="add" style="color:black" /></form>
+        .row
+            form
+            
+            script.
+                (200, {'Content-Type': 'text/html' });
+            <form action="/item1" enctype="multipart/form-data" method="post"> <br><br><input multiple="multiple" name="upload" type="file"br>
+            <input class="btn waves-effect waves-light blue-grey darken-4 white-text" type="submit" value="add" /></form>
 
 
 
@@ -62,4 +63,3 @@ script.
 
            
         
-
