added ajax for bidderform, and had to comment out some code n custom ajax to fix some errors

--- a/src/views/forms/bidderform.jade
+++ b/src/views/forms/bidderform.jade
@@ -39,4 +39,4 @@ form(action='/bidder' method='post' class='col s12 white-text' style="margin:10p
             input(placeholder="Email" name="email" type="text" class="validate")
 
     .row
-        button(class="btn waves-effect waves-light blue-grey darken-4" type="submit" value="add") Add
+        button(class="btn waves-effect waves-light blue-grey darken-4" type="submit" value="add" id="createbidder") Add
