--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2,6 +2,14 @@ label{
 	color:white;
 }
 
+div#consignors_info{
+	color: white !important;
+}
+
+#consignors_paginate{
+	color: white !important;
+}
+
 .gear { position: relative; display: block; margin-bottom: 25px; padding-bottom: 15px; border-bottom: 1px solid #d9d9d9; }
 
 .gear a.editlink { position: absolute; right: 0; top: 13px; }
