--- a/src/views/invoiceconsignor.jade
+++ b/src/views/invoiceconsignor.jade
@@ -17,8 +17,8 @@ html(lang='en' class="blue-grey darken-4")
 			div(class="col s4 blue-grey darken-2 white-text center" style="height:100vh")
 				h4= "Invoice Consignor #" + consignorId
 
-			div(class="col s6 blue-grey darken-1" style="height:100vh")
-				div(class="white center" id="invoice" style="width:595px;height:842px")
+			div(class="col s6 white" style="height:100vh")
+				div(class="white center" id="invoice" style="width:100%")
 					div(class="invoice-box")
 						table(cellpadding="0" cellspacing="0")
 							tr(class="top")
