Added update and delete to consignors

--- a/src/views/forms/consignorform.jade
+++ b/src/views/forms/consignorform.jade
@@ -43,7 +43,7 @@ div(id="consignorform" style="display:none")
 
             div(class="col s3")
                 label(for="commission") Commission - %
-                input(value="10" id="commission" name="commission" type="text" class="validate")
+                input(value="10" name="commission" type="text" class="validate")
 
 
             div(class="col s3")
