--- a/src/css/style.css
+++ b/src/css/style.css
@@ -19,6 +19,21 @@ label { display: inline-block; font-weight: bold; color: white; width: 100px; }
 .savebtn:hover { color: #fff; background: blue-grey; text-decoration: none; }
 .savebtn:active { background: #556790; }
 
+.gear a.ceditlink { position: absolute; right: 0; top: 13px; }
+
+.csavebtn { position: absolute; right: 0; top: 13px; padding: 4px 9px; background: black; font-size: 1.2em; cursor: pointer; color: white; -webkit-box-shadow: inset 0 1px 0 #8a9cc2; -moz-box-shadow: inset 0 1px 0 #8a9cc2; box-shadow: inset 0 1px 0 #8a9cc2; margin-bottom: 5px; margin-top: -5px; display: none;
+}
+
+.csavebtn:hover { color: #fff; background: blue-grey; text-decoration: none; }
+.csavebtn:active { background: #556790; }
+
+.gear a.beditlink { position: absolute; right: 0; top: 13px; }
+
+.bsavebtn { position: absolute; right: 0; top: 13px; padding: 4px 9px; background: black; font-size: 1.2em; cursor: pointer; color: white; -webkit-box-shadow: inset 0 1px 0 #8a9cc2; -moz-box-shadow: inset 0 1px 0 #8a9cc2; box-shadow: inset 0 1px 0 #8a9cc2; margin-bottom: 5px; margin-top: -5px; display: none;
+}
+
+.bsavebtn:hover { color: #fff; background: blue-grey; text-decoration: none; }
+.bsavebtn:active { background: #556790; }
 
 table.dataTable#consignors tbody tr {
     background-color: initial !important;
