--- a/src/views/consignor.jade
+++ b/src/views/consignor.jade
@@ -5,7 +5,7 @@ head
 	link(href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet")
 	link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css")
 	link(rel="stylesheet" href="/css/style.css")
-	link(rel="stylesheet" href="/css/table.css")
+	link(rel="stylesheet" href="/css/tables.css")
 	link(rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.12/css/jquery.dataTables.css")
 
 	meta(name='viewport', content='width=device-width, initial-scale=1')
