--- a/src/views/bidder.jade
+++ b/src/views/bidder.jade
@@ -17,24 +17,27 @@ body
 	.row
 		
 		div(class="blue-grey darken-3 col s6" style="height:100vh")
-			table(class="white-text bordered highlight" id="consignors" cellspacing="0" width="100%")
+			table(class="white-text bordered highlight" id="bidders" cellspacing="0" width="100%")
 				thead
 					tr
+						th ID
 						th Firstname
 						th Lastname
 						th City
 				tbody
 					each bidder in bidders
-						tr
+						tr(class="editbidder")
+							td(class="clickedbidderid")= bidder.id
 							td=bidder.firstname
 							td=bidder.lastname
 							td=bidder.city
 
 		div(class="blue-grey darken-2 col s6" style="height:100vh")
-			ul(class="collapsible" data-collapsible="accordion")
-				li
-					div(class="btn waves-effect waves-light blue-grey darken-4 collapsible-header") Add new bidder
-							i(class="small material-icons blue-text" id="addBidder") add
+			.row
+				div(style="margin-top:10px;")
+					button(class="btn waves-effect waves-light blue-grey darken-4" id="addbidder") Add Bidder
+					a(class="btn waves-effect waves-light deep-orange darken-4" id="canceladdbidder" style="margin-left:10px; display: none") Cancel
 							
-					div(class="collapsible-body")
+			.row
 						include ./forms/bidderform.jade
+						include ./forms/editbidderform.jade
