--- a/src/views/forms/bidderform.jade
+++ b/src/views/forms/bidderform.jade
@@ -1,42 +1,43 @@
-form(action='/bidder' method='post' class='col s12 white-text' style="margin:10px")
-    .row
-        input-field(class='col s3 blue-grey darken-4')
-            label(for="bidderid") Bidder #ID
-            input(placeholder="Bidder#ID" name="bidderid" type="text" class="validate")
-    .row        
-        input-field(class='col s4')
-            label(for="firstname") First Name
-            input(placeholder="First Name" name="firstname" type="text" class="validate")
+div(id="bidderform" style="display:none")
+    form(action='/bidder' method='post' class='col s12 white-text' style="margin:10px")
+        .row
+            input-field(class='col s3 blue-grey darken-4')
+                label(for="bidderid") Bidder #ID
+                input(placeholder="Bidder#ID" name="bidderid" type="text" class="validate")
+        .row        
+            input-field(class='col s4')
+                label(for="firstname") First Name
+                input(placeholder="First Name" name="firstname" type="text" class="validate")
 
-        input-field(class='col s8')
-            label(for="lastname") Last Name
-            input(placeholder="Last Name" name="lastname" type="text" class="validate")
+            input-field(class='col s8')
+                label(for="lastname") Last Name
+                input(placeholder="Last Name" name="lastname" type="text" class="validate")
 
-    .row    
-        input-field(class='col s12')
-            label(for="address") Address
-            input(placeholder="Address" name="address" type="text" class="validate")
+        .row    
+            input-field(class='col s12')
+                label(for="address") Address
+                input(placeholder="Address" name="address" type="text" class="validate")
 
-    .row
-        input-field(class='col s2')
-            label(for="zipcode") Zipcode
-            input(placeholder="Zipcode" name="zipcode" type="text" class="validate")
+        .row
+            input-field(class='col s2')
+                label(for="zipcode") Zipcode
+                input(placeholder="Zipcode" name="zipcode" type="text" class="validate")
 
-        input-field(class='col s4')
-            label(for="city") City
-            input(placeholder="City" name="city" type="text" class="validate")
+            input-field(class='col s4')
+                label(for="city") City
+                input(placeholder="City" name="city" type="text" class="validate")
 
-        input-field(class='col s6')
-            label(for="country") Country
-            input(placeholder="Country" name="country" type="text" class="validate")
-    .row
-        input-field(class='col s4')
-            label(for="phone") Phone
-            input(placeholder="Phone Number" name="phone" type="text" class="validate")
+            input-field(class='col s6')
+                label(for="country") Country
+                input(placeholder="Country" name="country" type="text" class="validate")
+        .row
+            input-field(class='col s4')
+                label(for="phone") Phone
+                input(placeholder="Phone Number" name="phone" type="text" class="validate")
 
-        input-field(class='col s8')
-            label(for="email") Email
-            input(placeholder="Email" name="email" type="text" class="validate")
+            input-field(class='col s8')
+                label(for="email") Email
+                input(placeholder="Email" name="email" type="text" class="validate")
 
-    .row
-        button(class="btn waves-effect waves-light blue-grey darken-4" type="submit" value="add" id="createbidder") Add
+        .row
+            button(class="btn waves-effect waves-light blue-grey darken-4" type="submit" value="add" id="createbidder") Add
